5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1880_3141.log
== TEST (2019-07-03 14:05:13) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:05:59) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:35:33) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:44) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i < size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:47) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i < size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i < size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:37:20) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i > size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:38:46) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + (vet[i]**(1/6))
	i = i + 1
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:39:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:39:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- EXECUTION TIME:
5.14851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3141/main.py", line 8, in <module>
    x = x + ((vet[i])**(1/6))
IndexError: index 7 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:39:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:40:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1
n = size(vet)

M = ( x / n )**6
print(x)
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:28) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:45:32) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) > ):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
File "XXXX", line 7
    while(size(vet) > ):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:09) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

print(vet[i])
while(size(vet) > i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:36) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:42) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:49:06) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i < size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- EXECUTION TIME:
734.888
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:50:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i < size(vet)):
	x = x + (vet[i]**(1/6))
	n = size(vet)
	
M = ( x / n )**6

print(round(M, 2))
-- EXECUTION TIME:
796.215
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:50:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:50:50) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:52:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0
print(vet)

while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:55:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0

for a in vet:
	h = h + ((vet[a]))**(1/6)

print(h)
	
while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:55:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Numeros: ")))
i = 0
x = 0
h = 0

for a in vet:
	h = h + ((vet[a]))**(1/6)
	

print(h)
	
while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1
	
n = size(vet)

M = ( x / n )**6

print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:58:48) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) >= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:59:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) =< i):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- ERROR:
File "XXXX", line 6
    while(size(vet) =< i):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:00:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(size(vet) <= i):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:00:50) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i <= size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:01:23) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i != size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:01:35) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i != size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:01:57) 
-- CODE:
from numpy import*
vet = array(eval(input("Numeros: ")))
i = 0
x = 0

while(i != size(vet)):
	x = x + ((vet[i])**(1/6))
	i = i + 1

n = size(vet)
M = ( x / n )**6
print(round(M, 2))
-- EXECUTION TIME:
1.04219
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
4.52
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
3.39
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
2.79
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
